<resources>
    <string name="app_name">CardiaCare</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="registration"><u>Not Registered?</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="alreadyResitered"><u>Already Registered?</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regEmail">Enter registered email id </string>
    <string name="forgot_password_subheading">We’ll send a new password to this email id, using that you can then set a new password.</string>
    <string name="reset_password">We’ve sent a new password to your email id, enter it below and set a new password.</string>
    <string name="chest_pain">Recognise Chest Pain Symptoms</string>
    <string name="nearest_hospital">Find Nearest Heart-Attack Ready (STEMI) Hospital</string>
    <string name="stay_healthy">Stay Healthy</string>
    <string name="track_medication">Track Your Medication</string>
    <string name="value">kg/m<sub>2</sub></string>
    <string name="Do_you_smoke">Do you smoke?</string>
    <string name="had_heart_attack">Have you had a heart attack before?</string>
    <string name="have_diabetes">Do you have diabetes?</string>
    <string name="have_blood_presssure">Do you have high blood pressure?</string>
    <string name="have_cholesterol">Do you have high cholesterol?</string>
    <string name="had_paralytic_stroke">Have you ever had a paralytic stroke?</string>
    <string name="have_astama">Do you have bronchial asthma?</string>
    <string name="family_health">Has anyone in your immediate family had a heart attack?</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_network_not_enabled">Location services is turned off, please enable</string>
    <string name="open_location_settings">ENABLE</string>
    <string name="cancel">CANCEL</string>
    <string name="heart_pain">Pain / discomfort in Chest</string>
    <string name="jaw_pain">Pain in Jaw / Neck / Arm / Shoulder / Back</string>
    <string name="shortnessOfBreath">Shortness of breath</string>
    <string name="lightheadednes">Lightheadednes</string>
    <string name="vomitting">Nausea or Vomitting</string>
    <string name="title_activity_new_registration">NewRegistrationActivity</string>
    <string name="learn_more"><u>Learn More</u></string>
    <string name="sync_stemi">Sync with nearest heart-attack ready (STEMI) Hospital</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="privacy">This Privacy Policy applies to the CardiaCare Application (hereinafter referred to as the "App" or “CardiaCare”) owned by the STEMI India Charitable Trust (“STEMI India”), a not-for-profit organisation having its registered office situated at #204-205, Poongothai Nagar, Civil Aerodrome, Coimbatore – 641014.
        STEMI India recognizes the importance of maintaining your privacy. We value your privacy and appreciate your trust in us. This Policy describes how we treat user information we collect on CardiaCare. This Privacy Policy applies to all users of CardiaCare. By using and/or entering data into our App, you agree to this Privacy Policy.</string>
    <string name="collect_info">What information do we collect?</string>
    <string name="collect_info_answer">Contact information:\nWe may collect details such as your Name, Email ID, Phone Number and Address.\nPayment and billing information:\nWe do not collect your billing name, billing address and payment method. We NEVER collect your credit card number or credit card expiry date or other details pertaining to your credit card on our App.\n
        Demographic information:\nWe may collect demographic information about you, or any other information provided by your during the use of our App. We might collect this as part of a survey as well.\n
        Medical information:\nWe may collect information regarding your health profile such as whether you have diabetes, dyslipidemia or heart disease.\n
        Information about your lifestyle:\nWe may collect information about your lifestyle such as when and how much you exercise, how stressed you feel and when you smoke.\n
        Other information:\nWe may collect information about your IP address and the browser you\'re using. We might look at what site you came from, duration of time spent on our website, pages accessed or what site you visit when you leave us. We might also collect the type of mobile device you are using, or the version of the operating system your computer or device is running.</string>
    <string name="how_to_collect_info">How do we collect information?</string>
    <string name="how_to_collect_info_ans">Direct collection:\nWe collect information directly from you when you enter details on your App or when you grant permission to upload your details to a STEMI Hospital. We also collect information if you post a comment on our websites or ask us a question through phone or email.</string>
    <string name="personal_info">How do we use your personal information?</string>
    <string name="personal_info_ans">To contact you:\n •	We share information you agree explicitly to share with the STEMI Hospitals in case of an emergency and you would like to reduce time to diagnose and treat a heart attack.\n •	We might use the information you provide to contact you for follow up on treatment you received.\n •	We might use your information to remind you of follow-up medication or check-ups.\n
        To improve our services:\n •	We use information to improve our services. We might use your information to customize your experience with us. This could include displaying content based upon your preferences.\n •	We use information to look at site trends and customer interests. We may use your information to make our App and services better.\n •	We may combine information we get from you with information about you we get from third parties.\n
        To ensure security:\nWe use information for security purposes. We may use information to protect our company, our customers, or our websites.
        To abide by laws:\nWe use information as otherwise permitted by law.</string>
    <string name="third_party_info">Do we share information with third-parties?</string>
    <string name="third_party_ans">•	We will share information with third parties who perform services on our behalf.\n •	We share information with vendors who help us manage our online registration process or transactional message processors. Some vendors may be located outside of India.\n
          •	We may share information to comply with the law or to protect ourselves\n •	We will share information to respond to a court order or subpoena. We may also share it if a government agency or investigatory body requests. Or, we might also share information when we are investigating potential fraud.\n</string>
    <string name="third_party_sites">What about third-party sites?</string>
    <string name="third_party_sites_ans">If you click on one of the links to third-party websites, you may be taken to websites we do not control. This policy does not apply to the privacy practices of those websites. Read the privacy policy of other websites carefully. We are not responsible for these third-party sites.</string>
    <string name="grievance_officer">Who is the grievance officer?</string>
    <string name="grievance_ans">In accordance with Information Technology Act 2000 and rules made there under, the name and contact details of the Grievance Officer are provided below:\n
        Grievance Officer Name: Mr. Jerry David\n
        Address: First Floor, AGT Business Park, 25,Electronics Estate, Avinashi Road, Coimbatore - 641014.\n
        Phone: +91 422 4394546\n
        If you have any questions about this Policy or other privacy concerns, you can also email us at stemicardiacare@gmail.com.</string>
    <string name="jurisdiction">What about jurisdiction?</string>
    <string name="jurisdiction_ans">If you choose to install the App, your installation and any dispute over privacy is subject to this Policy and the App\'s Terms and Conditions. In addition to the foregoing, any disputes arising under this Policy shall be governed by the laws of India. Any legal action or proceeding relating to or arising from your access to or use of this Site shall be instituted in Coimbatore, India. You agree to submit to the jurisdiction of courts of Coimbatore, India and agree that the venue in these courts is proper in any such legal action or proceeding.</string>
    <string name="terms_condition">This document is an electronic record under the Information Technology Act, 2000 and rules thereunder as applicable and the amended provisions of the same. This electronic record is generated by a computer system and does not require any physical or digital signatures.\n\nThis document is published in accordance with the provisions of Rule 3 (1) of the Information Technology (Intermediaries guidelines) Rules, 2011 that require publishing the rules and regulations, privacy policy and Terms of Use for access or usage of the CardiaCare Application.\n\n
        The CardiaCare Application (hereinafter referred to as the "App" or “CardiaCare”) is owned by the STEMI India Charitable Trust (“STEMI India”), a not-for-profit organisation having its registered office situated at #204-205, Poongothai Nagar, Civil Aerodrome, Coimbatore – 641014.</string>
    <string name="acceptance">Welcome to CardiaCare. Before using our services, please familiarise yourself with our terms and conditions. If you do not agree with these terms, please discontinue usage of our application.\n\nYour use of the App and services and tools are governed by the following terms and conditions ("Terms and Conditions") as applicable to the App including the applicable policies which are incorporated herein by way of reference.
        For the purpose of these Terms and Conditions, wherever the context so requires "You" or "User" shall mean any natural or legal person who has agreed to become a user on the App by providing Registration Data while registering on the App as Registered User. The term "We", "Us", "Our" shall mean STEMI India.\n\nBy using our App, you agree to being a person competent to enter into a contract as governed by The Indian Contract Act of 1872. You agree that you are bound by the Terms and Conditions and any other additional rules, guidelines and restrictions that may be posted in specific sections of this App. All such additional rules, guidelines and restrictions are hereby incorporated by reference into these Terms and Conditions. STEMI India reserves the rights to changes these terms and conditions as it deems fit, at any time, without prior notice. You need to review these Terms and Conditions each time before you use this App.</string>
    <string name="copyright">This App contains graphics, photographs, images, artwork, text, fonts, software tools, and other information (referred to herein as “Content”). This App and all Content are copyrighted property owned by STEMI India or the copyrighted property of parties from whom STEMI India has licensed such property. All rights for this App and its Content are reserved worldwide. It is strictly prohibited to retain, copy, distribute, publish, or use any portion of the Content except as expressly allowed in these Terms and Conditions. STEMI India reserves the right to add to, delete from, or modify any part of the Content at any time without prior notice.</string>
</resources>