<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stemi.stemiapp.activity.ForgotPasswordActivity">


    <TextView
        android:id="@+id/tv_forgotPass_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/regEmail"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/forgot_pass_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forgotPass_heading"
        android:layout_margin="10dp"
        android:text="@string/forgot_password_subheading"
        android:gravity="center"
        android:textSize="15sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_forgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/forgot_pass_subheading"
        style="@style/StyledTilEditText">

        <EditText
            android:id="@+id/et_forgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionGo"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_oval_shape"
        android:text="SUBMIT"
        android:textColor="@color/white"
        android:layout_below="@+id/tl_forgotEmail"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/tv_forgot_not_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/registration"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp" />
</RelativeLayout>
